tests/machine/x/rust/order_by_map.error
line 0: compile: exit status 1
error[E0609]: no field `a` on type `HashMap<&str, {integer}>`
 --> /workspace/mochi/tests/machine/x/rust/order_by_map.rs:3:153
  |
3 | ... mut m = std::collections::HashMap::new(); m.insert("a", x.a); m.insert("b", x.b); m }; tmp1.push((tmp3, tmp2)); } tmp1.sort_by(|a,b| ...
  |                                                               ^ unknown field

error[E0609]: no field `b` on type `HashMap<&str, {integer}>`
 --> /workspace/mochi/tests/machine/x/rust/order_by_map.rs:3:173
  |
3 | ...tions::HashMap::new(); m.insert("a", x.a); m.insert("b", x.b); m }; tmp1.push((tmp3, tmp2)); } tmp1.sort_by(|a,b| a.0.partial_cmp(&b.0...
  |                                                               ^ unknown field

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0609`.

fn main() {